--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <meta name="theme-color" content="#ffffff"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/style.css"/>
-    <title>Title page</title>
+    <title>MOCRM</title>
     <!--title your page 'about-us' example-->
   </head>
   <body>
-    <main>
-      <div>this is index page</div><a href="page-2.html">page-2</a>
-    </main>
+    <main></main>
     <script src="js/libs.js"></script>
     <script src="js/main.js"></script>
   </body>
